<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game Trader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_inventory_main">myInventoryMain</string>
    <string name="recent">Most Recent Item</string>
    <string name="nopic">No Picture Item</string>
    <string name="titleTooLong">Title Way Too Long</string>
    <string name="oldestItem">Oldest Posted Item</string>
    <string name="notListed">Not Listed Item</string>
    <string name="myItems">My Items</string>

    <string name="title_activity_friends_list">Friends List</string>
    <string name="title_activity_inventory_list">Inventory List</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_inventory_item">InventoryItem</string>
    <string name="title_activity_edit_inventory_item">EditInventoryItem</string>
    <string name="title_activity_trade_history">TradeHistoryActivity</string>
    <string name="title_activity_trade">Trade</string>
    <string name="title_activity_search_page">Search</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_settings">Settings</string>

    <string name="AddInventory">Add Game to Inventory</string>
    <string name="inventoryList">Inventory List</string>
    <string name="title_activity_add_inventory">AddInventory</string>
    <string name="additionalInfo">Additional Info:</string>
    <string name="Address">Address:</string>
    <string name="addressString">Address</string>
    <string name="phone">Phone:</string>
    <string name="contactInfo">Contact Information:</string>
    <string name="condition">Condition:</string>
    <string name="owner">Owner:</string>
    <string name="status">Status:</string>
    <string name="conditionString">Game Condition</string>
    <string name="ownerString">Game Owner</string>
    <string name="statusString">Game Status</string>
    <string name="GameTitleString">Item Title</string>
    <string name="shareStatus">Share Status</string>
    <string name="gameCondition">Game Condition</string>
    <string name="gameConsole">Game Console:</string>
    <string name="save">Save</string>
    <string name="uploadImage">Upload image</string>
    <string name="gameTitle">Game Title</string>
    <string name="addInfo">Additional Info</string>
    <string name="home">Home</string>
    <string name="myProfile">My Profile</string>
    <string name="myInventory">My Inventory</string>
    <string name="friends">Friends</string>
    <string name="pendingTrades">Pending Trades</string>
    <string name="search">Search</string>
    <string name="setting">Settings</string>
    <string name="tradeHistory">Trade History</string>
    <string name="tradeAsk">Add Another Game</string>
    <string name="myGames">My Offered Games</string>
    <string name="makeTrade">Offer Trade</string>
    <string name="cancelTrade">Cancel</string>
    <string name="searchTitle">Search</string>
    <string name="searchName">By Name</string>
    <string name="searchConsole">By Game Console</string>
    <string name="searchConsoleText">Search By Game Console</string>
    <string name="searchNameText">Search By Name</string>
    <string name="delete">Delete</string>
    <string name="gameoffer">Offer Game</string>

    <string-array name="platforms_array">
        <item>PC</item>
        <item>PlayStation 1</item>
        <item>PlayStation 2</item>
        <item>PlayStation 3</item>
        <item>PlayStation 4</item>
        <item>Xbox</item>
        <item>Xbox 360</item>
        <item>Xbox One</item>
        <item>Wii</item>
        <item>Wii U</item>
        <item>Other</item>
    </string-array>

    <string-array name="platforms_array_inv">
        <item>All</item>
        <item>PC</item>
        <item>PlayStation 1</item>
        <item>PlayStation 2</item>
        <item>PlayStation 3</item>
        <item>PlayStation 4</item>
        <item>Xbox</item>
        <item>Xbox 360</item>
        <item>Xbox One</item>
        <item>Wii</item>
        <item>Wii U</item>
        <item>Other</item>
    </string-array>

    <string-array name="conditions_array">
        <item>New</item>
        <item>Like New</item>
        <item>Mint</item>
        <item>Acceptable</item>
    </string-array>
    <string name="title_activity_item_picture_viewer">Photos</string>

</resources>
