<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/bluebackground">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/home"
        android:id="@+id/homeText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_marginBottom="16dp"
        android:textColor="#61ba1c" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/myProfile"
        android:id="@+id/myProfile"
        android:layout_below="@+id/homeText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:text="@string/myInventory"
        android:id="@+id/myInventory"
        android:layout_below="@+id/myProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:text="@string/friends"
        android:id="@+id/friends"
        android:layout_below="@+id/myInventory"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:text="@string/pendingTrades"
        android:id="@+id/pendingTrades"
        android:layout_below="@+id/search"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/search"
        android:layout_below="@+id/friends"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:id="@+id/setting"
        android:layout_below="@+id/pendingTrades"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

</RelativeLayout>
