<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.t14.gametrader.EditInventoryItemActivity"
    android:background="@drawable/bluebackground"
    android:id="@+id/editItemRelativeLayout">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inventoryItemTitle"
        android:inputType="text"
        android:textSize="28dp"
        android:minWidth="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/uploadImage" />

    <ImageButton
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:id="@+id/uploadImage"
        android:minHeight="128dp"
        android:minWidth="128dp"
        android:maxWidth="128dp"
        android:maxHeight="128dp"
        android:layout_alignTop="@+id/uploadImageText"
        android:layout_toEndOf="@+id/gameConditionText"
        android:clickable="true"
        android:contentDescription="Picure of the game."
        android:scaleType="fitCenter"
        android:adjustViewBounds="false" />


    <!-- regarding spinners: http://developer.android.com/guide/topics/ui/controls/spinner.html -->
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameConsole"

        android:layout_below="@+id/uploadImage"
        android:layout_alignStart="@+id/uploadImage"
        android:spinnerMode="dropdown"
        android:entries="@array/platforms_array" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameCondition"
        android:layout_below="@+id/gameConsole"
        android:layout_alignStart="@+id/gameConsole"
        android:entries="@array/conditions_array" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gameTitle"
        android:id="@+id/inventoryItemTitleText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/uploadImage"
        android:id="@+id/uploadImageText"
        android:layout_below="@+id/inventoryItemTitle"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gameConsole"
        android:id="@+id/gameConsoleText"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/uploadImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gameCondition"
        android:id="@+id/gameConditionText"
        android:layout_below="@+id/gameConsole"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/shareStatus"
        android:id="@+id/shareStatusText"
        android:layout_below="@+id/gameCondition"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameCondition"
        android:layout_alignStart="@+id/gameCondition"
        android:orientation="vertical"
        android:id="@+id/shareStatus">
        <RadioButton android:id="@+id/sharePublic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Public"
            android:textColor="#000000"
            android:checked="true" />
        <RadioButton android:id="@+id/sharePrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Private"
            android:textColor="#000000"/>
        </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveInventory"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/AddInfoText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/addInfo"
        android:id="@+id/addInfo"
        android:textSize="20dp"
        android:layout_below="@+id/shareStatus"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AddInfoText"
        android:inputType="textMultiLine"
        android:layout_below="@+id/shareStatus"
        android:layout_toEndOf="@+id/gameConditionText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/deleteInventory"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/saveInventory" />


</RelativeLayout>
