<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.t14.gametrader.InventoryItemActivity"
    android:id="@+id/relativeItemView"
    android:background="@drawable/bluebackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Inventory Item"
        android:textColor="#000000"
        android:id="@+id/inventoryItemText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:id="@+id/inventoryItemImage"
        android:textColor="#ffffff"
        android:minHeight="128dp"
        android:minWidth="128dp"
        android:maxWidth="128dp"
        android:maxHeight="128dp"
        android:contentDescription="Game Image"
        android:scaleType="fitCenter"
        android:layout_below="@+id/inventoryItemText"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Game Info"
        android:id="@+id/gameInfoText"
        android:layout_alignTop="@+id/inventoryItemImage"
        android:layout_toEndOf="@+id/inventoryItemText" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Game Title"
        android:id="@+id/gameInfoTitle"
        android:layout_below="@+id/gameInfoText"
        android:layout_alignStart="@+id/gameInfoText" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Game Console"
        android:textColor="#000000"
        android:id="@+id/gameInfoConsole"
        android:layout_below="@+id/gameInfoTitle"
        android:layout_alignStart="@+id/gameInfoTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/conditionString"
        android:id="@+id/gameInfoCondition"
        android:layout_alignTop="@+id/gameConditionText"
        android:layout_alignStart="@+id/gameInfoConsole" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ownerString"
        android:id="@+id/gameInfoOwner"
        android:clickable="true"
        android:onClick="ViewProfile"
        android:layout_below="@+id/gameInfoCondition"
        android:layout_alignStart="@+id/gameInfoCondition" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/statusString"
        android:id="@+id/gameInfoStatus"
        android:layout_marginRight="27dp"
        android:layout_below="@+id/gameInfoOwner"
        android:layout_alignStart="@+id/gameInfoOwner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/condition"
        android:id="@+id/gameConditionText"
        android:layout_below="@+id/inventoryItemImage"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/owner"
        android:id="@+id/gameOwnerText"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gameConditionText"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/status"
        android:id="@+id/gameStatusText"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gameOwnerText"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contactInfo"
        android:id="@+id/ContactInfoText"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/gameInfoStatus"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/addressString"
        android:id="@+id/contactAddress"
        android:layout_toEndOf="@+id/contactAddressText"
        android:layout_toRightOf="@+id/contactAddressText"
        android:singleLine="false"
        android:layout_alignTop="@+id/contactAddressText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/additionalInfo"
        android:id="@+id/additionalInfo"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/contactAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/phone"
        android:id="@+id/contactPhoneText"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ContactInfoText"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Address"
        android:id="@+id/contactAddressText"
        android:layout_below="@+id/contactPhoneText"
        android:layout_alignParentLeft="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="Edit Item"
        android:id="@+id/buttonEditItem"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/gameInfoText"
        android:layout_alignParentRight="true"
        android:padding="0dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneEditField"
        android:layout_toEndOf="@+id/gameStatusText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="465135"
        android:phoneNumber="true"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/contactPhoneText"
        android:layout_toRightOf="@+id/contactPhoneText" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/additionalInfo"
        android:layout_toStartOf="@+id/gameInfoTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/additionalInfoText"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/additionalInfo"
        android:layout_toStartOf="@+id/tradeButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Trade Item"
        android:id="@+id/tradeButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Trade this item"
        android:id="@+id/tradeButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Offer this item"
        android:id="@+id/offerMyItemButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
