<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.t14.gametrader.SearchPageActivity"
    android:background="@drawable/bluebackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/searchTitle"
        android:textColor="#ffffff"
        android:id="@+id/searchText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchKey"
        android:textColor="#ffffff"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/searchText"
        android:singleLine="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchConsoleText"
        android:textColor="#ffffff"
        android:id="@+id/searchButton"
        android:layout_below="@+id/gameConsole"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gameConsole"
        android:entries="@array/platforms_array"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchNameText"
        android:textColor="#ffffff"
        android:id="@+id/button"
        android:layout_below="@+id/searchKey"
        android:layout_alignParentStart="true" />

</RelativeLayout>
