<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bluebackground"
    tools:context="ca.ualberta.t14.gametrader.TradeActivity">

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView2">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:id="@+id/tradeWant"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tradeFor"
        android:layout_alignParentStart="true"
        android:background="#0e97f1"
        android:layout_below="@+id/tradeWant"
        android:visibility="visible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tradeAsk"
        android:textColor="#ffffff"
        android:id="@+id/tradeAsk"
        android:layout_below="@+id/tradeFor"
        android:layout_alignParentStart="true" />

    </RelativeLayout>
</ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelTrade"
        android:textColor="#ffffff"
        android:id="@+id/cancelTrade"
        android:layout_alignBottom="@+id/scrollView2"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameoffer"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:id="@+id/gameOffer"
        android:layout_above="@+id/offerGame"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/makeTrade"
        android:textColor="#ffffff"
        android:id="@+id/makeTrade"
        android:layout_above="@+id/cancelTrade"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:textColor="#ffffff"
        android:id="@+id/comment"
        android:text="Add a comment."
        android:layout_above="@+id/makeTrade"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/offerGame"
        android:layout_above="@+id/comment"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="125dp"
        android:layout_alignParentStart="true" />

</RelativeLayout>
